fixed gallery frames spacing

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -290,6 +290,10 @@ textarea {
   position: relative;
 }
 
+.gallery {
+  width: 100%;
+}
+
 /* Main- GALLERY */
 ul {
   list-style: none;
